--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@ body, html {
   width: 100vw;
   height: 100vh;
   background-color: black;
-  background-image: url(background1.gif);
+  background-image: url(/assets/img/background1.gif);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
