--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,7 +180,7 @@ a {
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("/w3images/parallax3.jpg");
+    background-image: url("/assets/img/background3.gif");
     min-height: 400px;
 }
 
