--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@ body, html {
   width: 100vw;
   height: 100vh;
   background-color: black;
-  background-image: url(/assets/img/background1.gif);
+  background-image: url(/assets/background1.gif);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -184,8 +184,12 @@ a {
     min-height: 400px;
 }
 
+.bgimg-4 {
+    background-image: url("https://j.gifs.com/98z68P.gif");
+    min-height: 700px;
+}
 .ptrt-1{ 
-
+  im
 }
 
 
