--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,7 +185,7 @@ a {
 }
 
 .bgimg-4 {
-    background-image: url("https://j.gifs.com/98z68P.gif");
+    background-image: url("/assets/img/background5.gif");
     min-height: 300px;
 }
 .ptrt-1{ 
