--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,7 +168,7 @@ a {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url("/assets/img/background1.gif");
+    background-image: url("/assets/img/tamuelto2.gif");
     min-height: 100%;
 }
 
