--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,7 +159,7 @@ a {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3, .muelto {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -168,7 +168,7 @@ a {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url("/assets/img/tamuelto2.gif");
+    background-image: url("/assets/img/background1.gif");
     min-height: 100%;
 }
 
@@ -203,7 +203,7 @@ a {
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
-    .bgimg-1, .bgimg-2, .bgimg-3 {
+    .bgimg-1, .bgimg-2, .bgimg-3, .muelto {
         background-attachment: scroll;
     }
 }
