--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,7 +39,7 @@ body, html {
 .center__text {
   margin: auto;
   font-family: 'Montserrat', sans-serif;
-sfstext-transform: uppercase;
+text-transform: uppercase;
 }
 
 a {
