--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,8 +38,10 @@ body, html {
 
 .center__text {
   margin: auto;
+  font-size: 120px;
+  text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
-text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 a {
