RMS Website beta finished

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,12 +3,16 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>About Landing-Page</h2>
+              <h2>Acerca de Nosotros</h2>
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>Ofrecemos soluciones tecnológicas enfocadas en la modernización de sectores que han quedado rezagados en un mundo cada vez más digitalmente avanzado
+		</p>
+                <p>A través de nuestra aplicación brindamos a los restaurantes la capacidad de optimizar y modernizar el flujo de trabajo de sus negocios.
+		Agilizando el proceso de emisión y recepción de ordenes priorizando la facilidad de uso para tanto los comensales como los administradores y cocineros
+		</p>
+                <p>Nuestro producto está listo para usarse de forma inmediata, no requiere instalación ni hardware especializado, cualquier ordenador o tablet con 
+		Windows es compatible. Esto reduce enormemente el costo inicial de tiempo e infraestructura a diferencia de otros productos en el mercado.
+		</p>
                 <br/>
               </div>
         </div>
